gccida/g1/size_int_type_wide
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2430:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2432:7: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
if ( !size_htab_11 ) 
      ^~~~~~~~~~~~
      size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2434:1: error: use of undeclared identifier 'size_htab_11'
size_htab_11 = htab_create( 0x400uLL, size_htab_hash, size_htab_eq, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2435:25: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
ggc_add_deletable_htab( size_htab_11, 0LL, 0LL); 
                        ^~~~~~~~~~~~
                        size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2436:1: error: use of undeclared identifier 'new_const_10'
new_const_10 = make_node( INTEGER_CST); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2437:21: error: use of undeclared identifier 'new_const_10'
ggc_add_tree_root( &new_const_10, 1); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2439:6: error: use of undeclared identifier 'new_const_10'
v3 = new_const_10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2440:12: error: expected expression
*( _OWORD *)&new_const_10->block.vars = number; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2440:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&new_const_10->block.vars = number; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2440:14: error: use of undeclared identifier 'new_const_10'
*( _OWORD *)&new_const_10->block.vars = number; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2443:6: error: use of undeclared identifier 'new_const_10'
v5 = new_const_10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2444:15: error: use of undeclared identifier 'new_const_10'
*( ( _BYTE *)&new_const_10->block.common + 18) = ( 8 * ( v4 & 1)) | ( 4 * ( v4 & 1)) | *( ( _BYTE *)&new_const_10->block.common 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2444:102: error: use of undeclared identifier 'new_const_10'
*( ( _BYTE *)&new_const_10->block.common + 18) = ( 8 * ( v4 & 1)) | ( 4 * ( v4 & 1)) | *( ( _BYTE *)&new_const_10->block.common 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2446:24: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
slot = htab_find_slot( size_htab_11, v5, INSERT); 
                       ^~~~~~~~~~~~
                       size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2447:19: error: expected expression
v7 = ( tree_node *)*slot; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2447:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)*slot; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2450:6: error: use of undeclared identifier 'new_const_10'
v7 = new_const_10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2451:9: error: use of undeclared identifier 'new_const_10'
*slot = new_const_10; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/fold-const.c:2452:1: error: use of undeclared identifier 'new_const_10'
new_const_10 = make_node( INTEGER_CST); 
^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/size_int_type_wide/src/obj/fold-const.o] Error 1
